# 3MatchGame

./: 3MatchGame.cbp  3MatchGame.layout  DUDAS AQUÍ.txt  Tablero.cc  Tablero.cpp  Tablero.h  arroz.c  main.cc
3MatchGameQt/: 3MatchGame.pro  main.cpp  rect.cpp  rect.h
3matchgameubuntu/: .anjuta_sym_db.db  config.status  configure  configure.ac  nivel1.txt  nivel1.txt~
3matchgameubuntu/autom4te.cache/: output.1  requests  traces.1
3matchgameubuntu/src/: 3matchgameubuntu  Makefile  Makefile.am  Makefile.in  caja.cc  caja.cc~  caja.h  main.cc  main.cc~  tablero.cc  tablero.cc~  tablero.h
3matchgameubuntu/src/.deps/: main.Po  (+1 more)
3matchgameubuntu3/: .anjuta_sym_db.db  Makefile  config.h  libtool  nivel1-3.txt  nivel1.txt
3matchgameubuntu3/autom4te.cache/: output.0  requests
3matchgameubuntu3/po/: Makefile  Makefile.in
3matchgameubuntu3/src/: 3matchgameubuntu  Makefile  Makefile.am  Makefile.in  caja.cc  caja.h  caja.h~  juego.cc  juego.cc~  juego.h  juego.h~  main.cc  main.cc~  tablero.cc  tablero.cc~  tablero.h  tablero.h~
3matchgameubuntu3/src/.deps/: caja.Po  juego.Po  main.Po  tablero.Po
include/: Tablero.h
reloj/: main.cpp  reloj.cbp  reloj.depend  reloj.layout
src/: Ficha.cc  Ficha.h  Liberados.cc  Liberados.h  Tablero.cpp  Tablero.h  ficha.cc  juego.cc  juego.h  main.cpp  main.txt  nivel1-2.txt  nivel1-3.txt  nivel1.txt  tablero (4).txt  tablero.txt
src para ubuntu/: .anjuta_sym_db.db  Makefile.am  Makefile.in  main  main.cc  main.cc~  tablero.cc  tablero.cc~  tablero.h  tablero.h~
src para ubuntu/.anjuta/session/: anjuta.session  dock-layout.xml
(+4 files in other folders)
