## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = 3matchgameubuntu

3matchgameubuntu_SOURCES = \
	main.cc \
	tablero.cc \
	tablero.h \
	caja.cc \
	caja.h \
	juego.cc \
	juego.h

3matchgameubuntu_LDFLAGS = 

3matchgameubuntu_LDADD = 


